--- a/views/layouts/savedarticles.handlebars
+++ b/views/layouts/savedarticles.handlebars
@@ -24,7 +24,7 @@
         {{else}}
         <div class="panel panel-default">
             <div class="panel-body">
-                <h4>You have no saved articles.</h4>
+                <h4>You haven't saved any articles.</h4>
             </div>
         </div>
         {{/if}}
