--- a/public/style.css
+++ b/public/style.css
@@ -3,8 +3,17 @@ body {
     padding-top: 70px;
 }
 
+.jumbotron {
+    background-color: antiquewhite;
+    opacity: 0.9;
+}
+
 .deleteNote {
 	display: inline-block;
+}
+
+.panel {
+    opacity: 0.9;
 }
 
 .previousNotes {
